--- a/template.Rmd
+++ b/template.Rmd
@@ -28,11 +28,11 @@ hours <- read.csv("hours.csv")
 
 ## Summary
 
-The overall budget for `r quarter` was \$18,590.
+The overall budget for `r quarter` was `r sum(summarize(group_by(df,org),n=mean(totalreceived))["n"],na.rm=T)`.
 
-In `r quarter`, HSG Finance Committee met `r nrow(hours)` times for a total of `r sum(hours$minutes)` minutes. HSG funded `r nrow(summarize(group_by(df,org),n=n()))` HSOs, which reported `r sum(summarize(group_by(df,org),n=mean(attendactual))["n"],na.rm=T)` attendees across `r sum(summarize(group_by(df,org),n=mean(eventsactual))["n"],na.rm=T)` events in their post-fall quarter reviews. 
+In `r quarter`, HSG Finance Committee met `r nrow(hours)` times for a total of `r sum(hours$minutes)` minutes. HSG funded `r nrow(summarize(group_by(df,org),n=n()))` HSOs, which reported `r sum(summarize(group_by(df,org),n=mean(attendactual))["n"],na.rm=T)` attendees across `r sum(summarize(group_by(df,org),n=mean(eventsactual))["n"],na.rm=T)` events in their post-quarter reviews. 
 
-Breakdowns by event type, item type, and organization are included in this transparency report. Please use the survey at the end of this report to send us comments, suggestions, or questions about this report or HSG Finance Committee activities in general.
+Breakdowns by event type, item type, and organization are included in this transparency report. 
 
 Funding criteria used in this round included:
 
@@ -42,7 +42,7 @@ Funding criteria used in this round included:
 * How much non-HSG funding each HSO has access to (including rollover from previous quarters, non-Harris grants, or non-Harris RSO funding), see page 3
 * Detailed, itemized documentation with regards to planned expenses and justification for why unusual expenses are necessary
 
-As we note in a later section, additional criteria and more quantified criteria have been added for winter quarter.
+Planned improvements for next quarter are included at the end of this document.
 
 \newpage 
 
@@ -54,11 +54,6 @@ The minimum amount received by any HSO was \$`r min(summarize(group_by(df,org),t
 allocations_by_org(quarter, caption = "Note: BePP did not submit a budget request")
 ```
 
-
-```{r, fig.height = 6, include=F}
-rollover_by_org(quarter)
-```
-
 \newpage 
 
 ## Funding Criteria: Existing and External Funds 
@@ -68,13 +63,10 @@ Organizations with large amounts of unexplained rollover received limited fundin
 ```{r, fig.height = 5}
 compare_rollover_allocation(quarter)
 ```
+
 \newpage 
 
 ## Funding Outcomes: Number of Events
-
-The trend revealed here is to expect HSOs to generally held less events than planned, likely due to a limited amount of funding overall (scarce resources). 
-
-The general distribution of events remains the same when comparing planned versus held events: the HSOs who planned the most events held the most events, and those who planned the least events held the least events.
 
 ```{r, fig.height = 7}
 planned_events(quarter, caption = "Note: Gold=Planned, Maroon=Actual. IDPA and TAP did not report how many events they held in Fall")
@@ -88,7 +80,7 @@ compare_allocation_events(caption = "Low allocation not associated with number o
 
 ## Spending by Event Type
 
-We allocated funds on an organizational level, not on an item-by-item basis. While we collected total actual spending for fall quarter per HSO, the following analyses are estimates based on the proportion of funding requests dedicated to each category. For example, 38\% of requests by Asian Policy Forum related to their annual Southeast Asian cultural show. We scaled this proportion by the total amount awarded, \$1,420, to estimate the amount that would have been spent on cultural events. In this analysis, we only considered funds allocated by HSG, not external grants or funds.
+We allocated funds on an organizational level, not on an item-by-item basis. While we collected total actual spending for fall quarter per HSO, the following analyses are estimates based on the proportion of funding requests dedicated to each category. For example, if 38\% of requests by Asian Policy Forum related to their annual Southeast Asian cultural show. We would scale this proportion by the total amount awarded to estimate the amount that would have been spent on cultural events. In this analysis, we only considered funds allocated by HSG, not external grants or funds.
 
 Notation:
 
@@ -115,12 +107,6 @@ Notation:
 
 ```{r, fig.height = 3}
 spending_by_item_type(quarter)
-```
-
-```{r,include=F}
-uniques <- distinct(df, actual, externalreceived, totalreceived, totalrollover, eventsactual, events.planned, attendactual, totalrequested)
-
-lm(totalreceived ~ events.planned + totalrollover + externalreceived, uniques) %>% summary()
 ```
 
 ## Future improvements
