--- a/Winter 2025.Rmd
+++ b/Winter 2025.Rmd
@@ -21,7 +21,7 @@ quarter <- params$quarter
 # Harris Student Government Finance Committee Transparency Report `r quarter`
 
 ```{r data}
-source("utils.R")
+source("report.R")
 df <- setup(quarter)
 hours <- read.csv("hours.csv")
 ```
