--- a/Winter 2025.Rmd
+++ b/Winter 2025.Rmd
@@ -124,16 +124,16 @@ Improvement goals for next quarter:
 
 Sincerely,
 
-FIRST LAST, Finance Committee Chair
+Tony Jiang, Finance Committee Chair
 
-FIRST LAST, Second-Year Finance Committee Member
+Karen Yi, Second-Year Finance Committee Member
 
-FIRST LAST, Second-Year Finance Committee Member
+Andrea Kimpson, Second-Year Finance Committee Member
 
-FIRST LAST, Second-Year Finance Committee Member
+Shivani Patel, Second-Year Finance Committee Member
 
-FIRST LAST, First-Year Finance Committee Member
+Faris Alrakhis, First-Year Finance Committee Member
 
-FIRST LAST, First-Year Finance Committee Member
+Moe Alsharif, First-Year Finance Committee Member
 
-FIRST LAST, First-Year Finance Committee Member
+Tiffany Tu, First-Year Finance Committee Member
