--- a/Winter 2025.Rmd
+++ b/Winter 2025.Rmd
@@ -79,6 +79,13 @@ planned_spending(quarter, caption = "Note: Gold=Planned, Maroon=Actual. Because 
 planned_events(quarter, caption = "Note: Gold=Planned, Maroon=Actual.")
 ```
 
+
+## Funding Outcomes: Attendance
+
+```{r, fig.height = 7}
+planned_attendance(quarter, caption = "Note: Gold=Planned, Maroon=Actual.\nMiPPS, PMPSA, SASPA, UPSA, and WiPP did not report attendance for Winter quarter events.\nFor readability, this graph only shows attendance up to 300.\nMost orgs saw higher attendance than anticipated.")
+```
+
 \newpage 
 
 ```{r,include=F}
