--- a/Winter 2025.Rmd
+++ b/Winter 2025.Rmd
@@ -112,7 +112,7 @@ spending_by_event_type(quarter, caption = "Only HSG funds are considered.")
 
 ## Spending by Item Type
 
-See previous section for a description of how these items were calculated.
+We allocated funds on an organizational level, not on an item-by-item basis. While we collected total actual spending for fall quarter per HSO, the following analyses are estimates based on the proportion of funding requests dedicated to each category. For example, if 38\% of requests by Asian Policy Forum related to their annual Southeast Asian cultural show. We would scale this proportion by the total amount awarded to estimate the amount that would have been spent on cultural events. In this analysis, we only considered funds allocated by HSG, not external grants or funds.
 
 Notation:
 
@@ -128,6 +128,12 @@ spending_by_item_type(quarter)
 ## Future improvements
 
 Improvement goals for next quarter:
+* Release a list of vendors and vendor information to promote knowledge sharing among HSOs.
+* Expedite timelines by doing the following:
+  * Gaining direct access to the email inbox so that HSG Finance Committee does not have to go through the Student Engagement & Belonging team to send email updates about application timelines
+  * Making further technological improvements to collate applications as quickly as possible for review.
+  * Planning ahead and doing dry runs with Student Engagement & Belonging to avoid technical delays in funding disbursal.
+* Hosting office hours throughout the quarter so that HSOs can get their application questions answered before submitting. 
 
 \vspace{30pt}
 
