--- a/Winter 2025.Rmd
+++ b/Winter 2025.Rmd
@@ -133,7 +133,7 @@ The HSG Finance Committee conducted a survey in Winter 2025 to ask the Harris st
 print_results()
 ```
 
-<button id="survey"><a href="https://docs.google.com/forms/d/13AY3pScfDefIhoDTiEyqoUU0PzJFsFsCiKWmWpi2W8E/viewform?edit_requested=true&edit_requested=true">Disagree? Add your opinion!</a></button>
+<button id="survey"><a href="https://docs.google.com/forms/d/13AY3pScfDefIhoDTiEyqoUU0PzJFsFsCiKWmWpi2W8E/viewform?edit_requested=true&edit_requested=true" target="_blank">Disagree? Add your opinion!</a></button>
 
 ## Conclusion and Future Improvements
 
