--- a/template.Rmd
+++ b/template.Rmd
@@ -24,9 +24,9 @@ df <- setup(quarter)
 ```
 
 ## Summary
-The overall budget for `r quarter` was `r dollar_format()(sum(summarize(group_by(df,org),n=mean(totalreceived))["n"],na.rm=T))`.
+The overall budget for `r quarter` was $`r count_x("totalreceived")`.
 
-In `r quarter`, HSG Finance Committee funded `r nrow(summarize(group_by(df,org),n=n()))` HSOs, which reported at least `r round(sum(summarize(group_by(df,org),n=mean(attendactual,na.rm=T))["n"],na.rm=T))` attendees across `r round(sum(summarize(group_by(df,org),n=mean(eventsactual,na.rm=T))["n"],na.rm=T))` events in their post-quarter reviews. 
+In `r quarter`, HSG Finance Committee funded `r nrow(summarize(group_by(df,org),n=n()))` HSOs, which reported at least `r count_x("attendactual")` attendees across `r count_x("eventsactual")` events in their post-quarter reviews. 
 
 Breakdowns by event type, item type, and organization are included in this transparency report. 
 
@@ -44,7 +44,7 @@ Planned improvements for next quarter are included at the end of this document.
 
 ## Allocations by Organization
 
-The minimum amount received by any HSO was \$`r min(summarize(group_by(df,org),totalreceived)["totalreceived"],na.rm=T)` and the maximum was \$`r max(summarize(group_by(df,org),totalreceived)["totalreceived"],na.rm=T)`.
+The minimum amount received by any HSO was \$`r min(df$totalreceived,na.rm=T)` and the maximum was \$`r max(df$totalreceived,na.rm=T)`.
 
 ```{r, fig.height = 6.5}
 allocations_by_org(quarter, caption = "")
